--- a/packages/@uppy/companion/package.json
+++ b/packages/@uppy/companion/package.json
@@ -69,7 +69,7 @@
     "uuid": "8.1.0",
     "validator": "^12.1.0",
     "ws": "6.2.2",
-    "youtube-dl-progress-improved": "^1.1.2"
+    "youtube-dl-exec": "^2.4.4"
   },
   "devDependencies": {
     "@types/compression": "1.7.0",
